--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "babel-node": "babel-node",
     "start": "webpack && npm run babel-node -- server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test": "mocha --compilers js:babel-register test/**/*.js*",
     "test:watch": "npm run test -- --watch"
   },
   "author": "",
@@ -26,13 +26,16 @@
     "cpr": "^2.0.0",
     "enzyme": "^2.4.1",
     "http-server": "^0.9.0",
+    "jsdom": "^9.12.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.1",
     "npm-run-all": "^3.0.0",
+    "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -40,12 +43,21 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "isomorphic-fetch": "^2.2.1",
+    "jsdom": "^8.5.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "webpack": "^2.3.2"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-2"
+    ]
   }
 }
