--- a/package.json
+++ b/package.json
@@ -13,45 +13,32 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-1": "^6.22.0",
     "chai": "^3.5.0",
-    "chai-enzyme": "^0.5.1",
-    "chokidar-cli": "^1.2.0",
-    "cpr": "^2.0.0",
-    "enzyme": "^2.4.1",
-    "http-server": "^0.9.0",
-    "jsdom": "^9.12.0",
-    "mkdirp": "^0.5.1",
-    "mocha": "^3.0.1",
-    "npm-run-all": "^3.0.0",
-    "react-addons-test-utils": "^15.4.2",
-    "rimraf": "^2.5.4",
-    "sinon": "^1.17.6",
-    "sinon-chai": "^2.8.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^2.4.2"
+    "chai-jquery": "^2.0.0",
+    "enzyme": "^2.7.1",
+    "jsdom": "^8.1.0",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
+    "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "babel-core": "^6.23.1",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "isomorphic-fetch": "^2.2.1",
-    "jsdom": "^8.5.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^3.0.2",
-    "redux": "^3.6.0",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.8.1",
+    "redux": "^3.0.4",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
-    "webpack": "^1.14.0"
+    "webpack": "^1.12.9"
   },
   "babel": {
     "presets": [
