--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.8.1",
+    "react-scroll": "^1.5.4",
     "redux": "^3.0.4",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
